--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
+    "express-handlebars": "^7.1.3",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
